src/components/layout.css
/* ... */
.bg-overlay h1 {
  font-weight: bold;
}

.welcome-button {
  height: 50px;
  font-size: 20px;
  padding: 0 20px;
  margin-top: 30px;
}

/* Keyframes */
@keyframes wiggle {

  0%,
  7% {
    transform: rotateZ(0);
  }

  15% {
    transform: rotateZ(-15deg);
  }

  20% {
    transform: rotateZ(10deg);
  }

  25% {
    transform: rotateZ(-10deg);
  }

  30% {
    transform: rotateZ(6deg);
  }

  35% {
    transform: rotateZ(-4deg);
  }

  40%,
  100% {
    transform: rotateZ(0);
  }
}

hr.style-two {
  border: 0;
  height: 1px;
  background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0));
}

.pricing {
  background-color: #251F47;
  padding: 25px;
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
}

.pricing.active {
  border: 4px solid #ffffff;
}

.anchor-link {
  color: #ffffff;
  text-decoration: underline;
}

.anchor-link:hover {
  color: #7AE0BB;
}

.footer-link {
  color: #ffffff;
}

.footer-link:hover {
  color: #7AE0BB;
}

.process-number {
  border-radius: 50%;
  padding: 5px 12px;
  font-weight: bold;
  background: #7AE0BB;
  color: #ffffff;
  text-align: center;
  margin-right: 20px;
}

.process-number-one {
  border-radius: 50%;
  padding: 5px 14px;
  font-weight: bold;
  background: #7AE0BB;
  color: #ffffff;
  text-align: center;
  margin-right: 20px;
}

.pt-8 {
  margin-top: 150px !important;
}

.pb-8 {
  margin-bottom: 150px !important;
}

.who-we-are-overlay {
  padding-top: 150px;
  padding-bottom: 150px;
  background-repeat: no-repeat;
  background-image: url(../images/who-we-are.png);
  background-blend-mode: screen multiply;
}

.services-overlay {
  padding-top: 150px;
  padding-bottom: 150px;
  background-repeat: no-repeat;
  background-image: url(../images/services.png);
  background-blend-mode: screen multiply;
}

.pricing-overlay {
  padding-top: 150px;
  padding-bottom: 150px;
  background-repeat: no-repeat;
  background-image: url(../images/pricing.png);
  background-blend-mode: screen multiply;
}

.why-us-overlay {
  padding-top: 150px;
  padding-bottom: 150px;
  background-repeat: no-repeat;
  background-image: url(../images/why-us.png);
  background-blend-mode: screen multiply;
}

.process-overlay {
  padding-top: 150px;
  padding-bottom: 150px;
  background: #341f54;
  background-repeat: no-repeat;
  background-image: url(../images/process-bg.png);
  background-blend-mode: screen multiply;
}

.why-us-header {
  margin-top: -80px;
  padding-top: 150px;
  padding-bottom: 80px;
  background-color: #341f54;
}

.why-us-section {
  padding-top: 130px;
  padding-bottom: 30px;
}

.why-us-section-overlay-1 {
  padding-top: 130px;
  padding-bottom: 100px;
  background-repeat: no-repeat;
  background-image: url(../images/why-us-bg-2.png);
  background-blend-mode: screen multiply;
}

.why-us-section-overlay-2 {
  padding-top: 130px;
  padding-bottom: 100px;
  background-repeat: no-repeat;
  background-image: url(../images/why-us-bg.png);
  background-blend-mode: screen multiply;
}

.our-services-section {
  padding-top: 130px;
  padding-bottom: 100px;
  background-repeat: no-repeat;
  background-image: url(../images/why-us-bg.png);
  background-blend-mode: screen multiply;
}

.our-services-section-2 {
  padding-top: 130px;
  padding-bottom: 100px;
  background-repeat: no-repeat;
  background-image: url(../images/why-us-bg-2.png);
  background-blend-mode: screen multiply;
}

.how-to-section {
  padding-top: 130px;
}

.accordion>.card {
  position: relative;
  display: flex;
  flex-direction: column;
  min-width: 0;
  word-wrap: break-word;
  background-color: #341F54;
  background-clip: border-box;
  border: 1px solid #251F47;
  border-radius: .25rem;
}

.accordion>.card>.card-header>.btn-link {
  color: #ffffff !important;
  font-weight: 600;
}

.accordion>.card>.collapse>.card-body,
.accordion>.card>.collapsing>.card-body {
  padding: 15px 30px !important;
  font-size: 14px;
  background-color: #494170;
}

.about-header {
  margin-top: -80px;
  padding-top: 150px;
  padding-bottom: 230px;
  background-color: #341f54;
}

.about-section-second {
  margin-top: -300px;
  padding-bottom: 150px;
}

.marksmen-overlay {
  padding-top: 150px;
  padding-bottom: 150px;
  /* background-repeat: no-repeat;
  background-image: url(../images/services.png);
  background-blend-mode: screen multiply; */
}

.person-overlay {
  background-repeat: no-repeat;
  background-image: url(../images/person-bg.png);
  background-blend-mode: screen multiply;
}

.person-overlay-small {
  background-repeat: no-repeat;
  background-image: url(../images/person-small-bg.png);
  background-blend-mode: screen multiply;
}

.person-info {
  background: #712086;
  padding-top: 30px;
  padding-bottom: 20px;
}

.process-section {
  padding-top: 150px;
  padding-bottom: 150px;
  background-repeat: no-repeat;
  background-image: url(../images/pricing.png);
  background-blend-mode: screen multiply;
}

.get-started-section {
  padding-top: 150px;
  padding-bottom: 150px;
  background-repeat: no-repeat;
  background-image: url(../images/why-us.png);
  background-blend-mode: screen multiply;
}

.schedule-a-call-section {
  padding-top: 30px;
  padding-bottom: 30px;
}

.carousel-control-next-icon {
  display: none;
}

.carousel-control-prev-icon {
  display: none;
}

.carousel-indicators {
  justify-content: left;
  margin-left: 0;
  margin-right: 0;
}

#gatsby-focus-wrapper>main>section.services-overlay>div>div.pt-2.pb-5.row>div:nth-child(1)>div>.carousel-indicators {
  justify-content: center;
  margin-left: 15%;
  margin-right: 15%;
  top: 330px;
}

.table-dark {
  background-color: #251F47;
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
}

.table-dark td,
.table-dark th,
.table-dark thead th {
  border-color: #3A3459;
}

.timeline-form .table td,
.timeline-form .table th {
  vertical-align: middle;
}

.timeline-form .custom-control {
  display: inline-block;
  min-height: unset;
  padding-left: 0px;
}
/* ... */

